Bug 748161 - Improve visible tab indication in tab list menu. r=dao ui-r=shorlander
UltraBlame original commit: e2d386af93fa7822dbacd48ec16df17adc7522f6

--- a/browser/themes/gnomestripe/browser.css
+++ b/browser/themes/gnomestripe/browser.css
@@ -1069,7 +1069,6 @@ toolbar[iconsize="small"] #feed-button {
   padding: 1px;
   margin: -1px;
   -moz-margin-end: 0;
-  font-size: .9em;
 }
 
 #identity-box:-moz-locale-dir(ltr) {
@@ -1094,19 +1093,9 @@ toolbar[iconsize="small"] #feed-button {
 
 #identity-box.verifiedIdentity {
   background-color: #fff;
-  color: hsl(92,100%,30%);
+  color: hsl(92,81%,16%);
+  -moz-border-end: 1px solid hsla(92,81%,16%,.2);
   -moz-margin-end: 4px;
-  background-image: -moz-linear-gradient(hsla(92,81%,16%,0),
-                                         hsla(92,81%,16%,.2) 25%,
-                                         hsla(92,81%,16%,.2) 75%,
-                                         hsla(92,81%,16%,0));
-  background-position: right;
-  background-size: 1px;
-  background-repeat: no-repeat;
-}
-
-#identity-box.verifiedIdentity:-moz-locale-dir(rtl) {
-  background-position: left;
 }
 
 
@@ -1742,7 +1731,7 @@ richlistitem[type~="action"][actiontype="switchtab"] > .ac-url-box > .ac-action-
 
 .alltabs-item[tabIsVisible] {
   
-  box-shadow: inset 0 0 0 2em hsla(0,0%,50%,.15);
+  box-shadow: inset -5px 0 ThreeDShadow;
 }
 
 
