--- a/browser/themes/pinstripe/browser.css
+++ b/browser/themes/pinstripe/browser.css
@@ -980,7 +980,6 @@ toolbar[mode="icons"] #zoom-in-button {
   padding-bottom: 1px;
   -moz-padding-start: 4px;
   -moz-padding-end: 0;
-  font-size: .9em;
 }
 
 #identity-box:-moz-locale-dir(ltr) {
@@ -1026,19 +1025,9 @@ toolbar[mode="icons"] #zoom-in-button {
 }
 
 #identity-box.verifiedIdentity {
-  color: hsl(92,100%,30%);
+  color: hsl(92,100%,20%);
+  -moz-border-end: 1px solid hsla(92,81%,16%,.2);
   -moz-padding-end: 4px;
-  background-image: -moz-linear-gradient(hsla(92,81%,16%,0),
-                                         hsla(92,81%,16%,.2) 25%,
-                                         hsla(92,81%,16%,.2) 75%,
-                                         hsla(92,81%,16%,0));
-  background-position: right;
-  background-size: 1px;
-  background-repeat: no-repeat;
-}
-
-#identity-box.verifiedIdentity:-moz-locale-dir(rtl) {
-  background-position: left;
 }
 
 #identity-box:-moz-focusring {
@@ -2196,7 +2185,7 @@ toolbarbutton.chevron > .toolbarbutton-menu-dropmarker {
 
 .alltabs-item[tabIsVisible] {
   
-  box-shadow: inset 0 0 0 2em hsla(0,0%,50%,.15);
+  box-shadow: inset -5px 0 ThreeDShadow;
 }
 
 
