--- a/browser/themes/winstripe/browser.css
+++ b/browser/themes/winstripe/browser.css
@@ -1359,7 +1359,6 @@ html|*.urlbar-input:-moz-lwtheme:-moz-placeholder,
 
 #identity-box {
   padding: 2px;
-  font-size: .9em;
 }
 
 #identity-box:-moz-locale-dir(ltr) {
@@ -1407,19 +1406,9 @@ html|*.urlbar-input:-moz-lwtheme:-moz-placeholder,
 }
 
 #identity-box.verifiedIdentity {
-  color: hsl(92,100%,30%);
+  color: hsl(92,100%,20%);
+  -moz-border-end: 1px solid hsla(92,81%,16%,.2);
   -moz-margin-end: 4px;
-  background-image: -moz-linear-gradient(hsla(92,81%,16%,0),
-                                         hsla(92,81%,16%,.2) 25%,
-                                         hsla(92,81%,16%,.2) 75%,
-                                         hsla(92,81%,16%,0));
-  background-position: right;
-  background-size: 1px;
-  background-repeat: no-repeat;
-}
-
-#identity-box.verifiedIdentity:-moz-locale-dir(rtl) {
-  background-position: left;
 }
 
 #identity-box.verifiedIdentity:not(:-moz-lwtheme) {
@@ -2086,7 +2075,7 @@ richlistitem[type~="action"][actiontype="switchtab"][selected="true"] > .ac-url-
 
 .alltabs-item[tabIsVisible] {
   
-  box-shadow: inset 0 0 0 2em hsla(0,0%,50%,.15);
+  box-shadow: inset -5px 0 ThreeDShadow;
 }
 
 
